fix(crimes): :lipstick: Correct layout issues on mobile devices

--- a/assets/css/crimes.css
+++ b/assets/css/crimes.css
@@ -19,7 +19,7 @@ main {
   overflow: hidden;
   height: 100dvh;
   display: flex;
-  gap: 3rem;
+  gap: 2rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -27,7 +27,7 @@ main {
 
 .hero__text-container {
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   flex-direction: column;
 }
 
@@ -72,6 +72,7 @@ main {
 }
 
 .crimes {
+  padding-top: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
